src/test/ui/macros/macro-in-expression-context-2.stderr
error: expected expression, found the end of the macro arm
  --> $DIR/macro-in-expression-context-2.rs:5:16
   |
LL |         _ => { empty!() }
   |                ^^^^^^^^

error: aborting due to previous error

